--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-torch
-torchvision
-tqdm
-numpy
-matplotlib
-seaborn
-opencv-python
-scikit-learn
+torch>=1.13
+torchvision>=0.14.0
+tqdm>=4.64.1
+numpy>=1.23.4
+matplotlib>=3.6.1
+seaborn>=0.12.1
+opencv-python>=4.6.0.66
+scikit-learn>=1.1.3
